Tangram Web: Fix CSS to break header on small screen, fix main container width.

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -15,6 +15,104 @@ body {
   width: 50%;
 }
 
+/* ----- COMMON ----- */
+
+/* override stuff from boostrap */
+.bg-primary {
+  background-color: #2f2823 !important;
+}
+
+
+/* ----- APP HEADER ----- */
+
+.header {
+  margin-bottom: 1em;
+}
+
+.navbar-brand {
+  font-weight: bold;
+  font-size: 1.2em;
+  border-right:  solid 1px black;
+}
+
+.navbar-brand-detail {
+  font-weight: normal;
+  font-size: 0.5em;
+  display: block;
+}
+
+.nav-font-size {
+  font-size: 1em;
+}
+
+@media (max-width: 800px) {
+  .nav-font-size {
+    font-size: 0.75em;
+  }
+
+  .navbar-brand {
+    font-size: 1em;
+  }
+
+  .navbar-brand-detail {
+    font-size: 0.4em;
+  }
+}
+
+
+/* ----- INTRO PAGE ----- */
+
+.intro-page {
+  max-width: 100%;
+}
+
+
+.markdown img[src*="#right"] {
+  float: right;
+  margin-left: 1em;
+}
+
+.markdown img[src*="#left"] {
+  display: block;
+  margin: auto;
+  /*float: left;*/
+  /*margin-right: 1em;*/
+}
+
+.markdown img[src*="#center"] {
+  display: block;
+  margin: auto;
+  max-width: 70%;
+}
+
+.markdown img[src*="piece_"] {
+  max-width: 128px;
+}
+
+.markdown table, .markdown tr, .markdown td, .markdown th {
+  border: #C0C0C0 solid 1px;
+  border-collapse: collapse;
+}
+
+.markdown table {
+  margin-bottom: 1em;
+  max-width: 100%;
+}
+
+.markdown td, .markdown th {
+  white-space: nowrap;
+  padding-left: 1em;
+  padding-right: 1em;
+}
+
+/*.markdown td:first-of-type {*/
+/*  width: 140px !important;*/
+/*}*/
+
+
+/* ----- GENERATOR PAGE ----- */
+
+
 .title {
   font-size: x-large;
   font-weight: bold;
@@ -93,62 +191,9 @@ body {
   background-color: #E8E8E8;
 }
 
-/* override stuff from boostrap */
-.bg-primary {
-  background-color: #2f2823 !important;
-}
 
-.header {
-  margin-bottom: 1em;
-}
 
-.navbar-brand {
-  font-weight: bold;
-  font-size: x-large;
-  border-right:  solid 1px black;
-}
+/* ----- ANALYZER PAGE ----- */
 
-.navbar-brand-detail {
-  font-weight: normal;
-  font-size: small;
-  display: block;
-}
-
-.markdown img[src*="#right"] {
-  float: right;
-  margin-left: 1em;
-}
-
-.markdown img[src*="#left"] {
-  float: left;
-  margin-right: 1em;
-}
-
-.markdown img[src*="#center"] {
-  display: block;
-  margin: auto;
-}
-
-.markdown img[src*="piece_"] {
-  max-width: 128px;
-}
-
-.markdown table, .markdown tr, .markdown td, .markdown th {
-  border: #C0C0C0 solid 1px;
-  border-collapse: collapse;
-}
-
-.markdown table {
-  margin-bottom: 1em;
-}
-
-.markdown td, .markdown th {
-  white-space: nowrap;
-  padding-left: 1em;
-  padding-right: 1em;
-}
-
-/*.markdown td:first-of-type {*/
-/*  width: 140px !important;*/
-/*}*/
+/* ----- PIECES PAGE ----- */
 
